# cheers-android

./: README.md  build.gradle  build.gradle.kts  gradle.properties  local.properties  settings.gradle  settings.gradle.kts
app/src/main/proto/cheers/: BUILD.bazel
app/src/main/proto/cheers/account/v1/: account_service.proto
app/src/main/proto/cheers/activity/v1/: activity_service.proto
app/src/main/proto/cheers/api/v1/: BUILD.bazel  main.proto
app/src/main/proto/cheers/auth/v1/: auth_service.proto
app/src/main/proto/cheers/chat/v1/: chat_event.proto  chat_service.proto
app/src/main/proto/cheers/comment/v1/: comment_event.proto  comment_service.proto
app/src/main/proto/cheers/friendship/v1/: friendship_service.proto
app/src/main/proto/cheers/note/v1/: note_service.proto
app/src/main/proto/cheers/order/v1/: order_service.proto
app/src/main/proto/cheers/party/v1/: party_service.proto
app/src/main/proto/cheers/payment/v1/: payment_event.proto  payment_service.proto
app/src/main/proto/cheers/post/v1/: post_event.proto  post_service.proto
app/src/main/proto/cheers/story/v1/: story_service.proto
app/src/main/proto/cheers/ticket/v1/: ticket.proto  ticket_service.proto
app/src/main/proto/cheers/type/: ticket.proto  user-event.proto
app/src/main/proto/cheers/type/party/: party.proto
app/src/main/proto/cheers/type/post/: post.proto
app/src/main/proto/cheers/type/privacy/: privacy.proto
app/src/main/proto/cheers/type/story/: story.proto
app/src/main/proto/cheers/type/user/: user.proto
app/src/main/proto/cheers/user/v1/: user_event.proto  (+1 more)
(+2280 files in other folders)
